pricings added to fa2bee laundry

--- a/src/fa2bee-laundry.html
+++ b/src/fa2bee-laundry.html
@@ -182,103 +182,6 @@
         />
       </section>
 
-      <section
-        class="p-5 py-5 xl:p-20 xl:px-24 w-fit mx-auto"
-        id="how-it-works"
-      >
-        <div class="my-10">
-          <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
-            How It Works
-          </h1>
-          <div class="flex items-center justify-center mb-5">
-            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
-            <img src="img/bee-with-ring.png" class="mx-2" />
-            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
-          </div>
-        </div>
-
-        <!-- we collect -->
-        <div class="flex items-stretch">
-          <div class="max-w-md px-4">
-            <div class="flex flex-col items-center h-full">
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-              <div
-                class="w-[60px] h-[60px] overflow-hidden rounded-full bg-laundryPurple text-center flex justify-center items-center font-extrabold text-xl"
-              >
-                <img
-                  src="img/icons/pick-up.png"
-                  alt="FA2BEE LAUNDRY"
-                  className="object-scale-down w-[50px] h-[50px]"
-                />
-              </div>
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-            </div>
-          </div>
-          <div class="flex-1 p-3 py-7">
-            <h2 class="text-beeYellow font-extrabold mb-3">We Collect</h2>
-            <p class="max-w-2xl">
-              This is an available option that the customer can choose to have
-              their items picked up at their own convenience.
-            </p>
-          </div>
-        </div>
-
-        <!-- We clean -->
-        <div class="flex items-stretch">
-          <div class="max-w-md px-4">
-            <div class="flex flex-col items-center h-full">
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-              <div
-                class="w-[60px] h-[60px] overflow-hidden rounded-full bg-laundryPurple text-center flex justify-center items-center font-extrabold text-xl"
-              >
-                <img
-                  src="img/icons/laundry.png"
-                  alt="FA2BEE laundry"
-                  className=" w-[50px] h-[50px]  object-scale-down"
-                />
-              </div>
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-            </div>
-          </div>
-          <div class="flex-1 p-3 py-7">
-            <h2 class="text-beeYellow font-extrabold mb-3">We Clean</h2>
-            <p class="max-w-2xl">
-              Laundry is then done with the utmost care, paying attention to
-              what every fabric needs, sorting out the right colors and having
-              stains carefully removed.
-            </p>
-          </div>
-        </div>
-
-        <!-- you collect -->
-        <div class="flex items-stretch">
-          <div class="max-w-md px-4">
-            <div class="flex flex-col items-center h-full">
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-              <div
-                class="w-[60px] h-[60px] overflow-hidden rounded-full bg-laundryPurple text-beeYellow text-center flex justify-center items-center font-extrabold text-xl"
-              >
-                <img
-                  src="img/icons/delivery.png"
-                  alt="FA2BEE LAUNDRY"
-                  class="w-[50px] h-[50px]"
-                />
-              </div>
-              <div class="flex-1 w-1 bg-laundryPurple"></div>
-            </div>
-          </div>
-          <div class="flex-1 p-3 py-7">
-            <h2 class="text-beeYellow font-extrabold mb-3">
-              Laundry is delivered within 2 days
-            </h2>
-            <p class="max-w-2xl">
-              If you are in a hurry to get your items delivered , we've got you
-              covered in the fastest way possible simply let us know!
-            </p>
-          </div>
-        </div>
-      </section>
-
       <section class="p-5 py-5 xl:p-20 xl:px-36 bg-white" id="services">
         <h1 class="text-center mb-4 text-laundryPurple font-bold text-xl">
           Our Laundry Services
@@ -292,6 +195,118 @@
         <div
           class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3 services-container"
         ></div>
+      </section>
+
+      <section
+        class="p-5 py-5 xl:p-20 xl:px-24 bg-laundryPurple"
+        id="how-it-works"
+      >
+        <div class="my-10">
+          <h1 class="text-center mb-4 text-beeYellow font-bold text-xl">
+            How It Works
+          </h1>
+          <div class="flex items-center justify-center mb-5">
+            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            <img src="img/bee-with-ring.png" class="mx-2" />
+            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+          </div>
+        </div>
+
+        <div class="max-w-2xl mx-auto">
+          <!-- we collect -->
+          <div class="flex items-stretch">
+            <div class="max-w-md px-4">
+              <div class="flex flex-col items-center h-full">
+                <div class="flex-1 w-1 bg-customBlack"></div>
+                <div
+                  class="w-[60px] h-[60px] overflow-hidden rounded-full bg-customBlack text-center flex justify-center items-center font-extrabold text-xl"
+                >
+                  <img
+                    src="img/icons/pick-up.png"
+                    alt="FA2BEE LAUNDRY"
+                    className="object-scale-down w-[50px] h-[50px]"
+                  />
+                </div>
+                <div class="flex-1 w-1 bg-customBlack"></div>
+              </div>
+            </div>
+            <div class="flex-1 p-3 py-7">
+              <h2 class="text-beeYellow font-extrabold mb-3">We Collect</h2>
+              <p class="">
+                This is an available option that the customer can choose to have
+                their items picked up at their own convenience.
+              </p>
+            </div>
+          </div>
+
+          <!-- We clean -->
+          <div class="flex items-stretch">
+            <div class="max-w-md px-4">
+              <div class="flex flex-col items-center h-full">
+                <div class="flex-1 w-1 bg-customBlack"></div>
+                <div
+                  class="w-[60px] h-[60px] overflow-hidden rounded-full bg-customBlack text-center flex justify-center items-center font-extrabold text-xl"
+                >
+                  <img
+                    src="img/icons/laundry.png"
+                    alt="FA2BEE laundry"
+                    className=" w-[50px] h-[50px]  object-scale-down"
+                  />
+                </div>
+                <div class="flex-1 w-1 bg-customBlack"></div>
+              </div>
+            </div>
+            <div class="flex-1 p-3 py-7">
+              <h2 class="text-beeYellow font-extrabold mb-3">We Clean</h2>
+              <p class="">
+                Laundry is then done with the utmost care, paying attention to
+                what every fabric needs, sorting out the right colors and having
+                stains carefully removed.
+              </p>
+            </div>
+          </div>
+
+          <!-- you collect -->
+          <div class="flex items-stretch">
+            <div class="max-w-md px-4">
+              <div class="flex flex-col items-center h-full">
+                <div class="flex-1 w-1 bg-customBlack"></div>
+                <div
+                  class="w-[60px] h-[60px] overflow-hidden rounded-full bg-customBlack text-beeYellow text-center flex justify-center items-center font-extrabold text-xl"
+                >
+                  <img
+                    src="img/icons/delivery.png"
+                    alt="FA2BEE LAUNDRY"
+                    class="w-[50px] h-[50px]"
+                  />
+                </div>
+                <div class="flex-1 w-1 bg-customBlack"></div>
+              </div>
+            </div>
+            <div class="flex-1 p-3 py-7">
+              <h2 class="text-beeYellow font-extrabold mb-3">
+                Laundry is delivered within 2 days
+              </h2>
+              <p class="">
+                If you are in a hurry to get your items delivered , we've got
+                you covered in the fastest way possible simply let us know!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="p-5 py-5 xl:p-20 xl:px-36 bg-white" id="pricing">
+        <h1 class="text-center mb-4 text-laundryPurple font-bold text-xl">
+          Our Pricing
+        </h1>
+        <div class="flex items-center justify-center mb-10">
+          <div class="h-0.5 bg-laundryPurple w-20 mx-3"></div>
+          <img src="img/bee-with-ring.png" class="mx-2" />
+          <div class="h-0.5 bg-laundryPurple w-20 mx-3"></div>
+        </div>
+
+        <div class="pricesContainer"></div>
       </section>
     </main>
 
@@ -409,6 +424,137 @@
               </p>
             </div>
           </div>
+        `;
+      });
+
+      const pricing = [
+        {
+          title: `<span class="font-extralight text-laundryPurple mr-2">Dry</span> <span class="text-beeYellow font-extrabold">Cleaning</span>`,
+          description: `Below are the various prices for our dry cleaning services!`,
+          priceData: [
+            {
+              service: `Suit and Pant`,
+              price: `D 300`,
+            },
+            {
+              service: `Suits Only`,
+              price: `D 200`,
+            },
+            {
+              service: `Pants Only`,
+              price: `D 150`,
+            },
+            {
+              service: `Comforter/Blanket/Duvet`,
+              price: `D 400`,
+            },
+            {
+              service: `Flee Blankets`,
+              price: `D 200`,
+            },
+            {
+              service: `African Attire`,
+              price: `D 400`,
+            },
+            {
+              service: `Wedding Gown`,
+              price: `D 1000`,
+            },
+            {
+              service: `Sneaker`,
+              price: `D 300`,
+            },
+            {
+              service: `Curtain`,
+              price: `D 50 (each)`,
+            },
+            {
+              service: `Bedsheet Set (Excluding Duvet)`,
+              price: `D 150`,
+            },
+            {
+              service: `Floor Mats (price may vary)`,
+              price: `D 300`,
+            },
+            {
+              service: `Table Cloths (price may vary)`,
+              price: `D 300`,
+            },
+          ],
+        },
+        {
+          title: `<span class="font-extralight text-laundryPurple mr-2">Regular</span> <span class="text-beeYellow font-extrabold">Laundry</span>`,
+          description: `Below are the various prices for our regular laundry service!`,
+          priceData: [
+            {
+              service: `Wash and Iron (Per Dozen)`,
+              price: `D 400`,
+            },
+            {
+              service: `Wash Only (Per Dozen)`,
+              price: `D 200`,
+            },
+            {
+              service: `Single Item`,
+              price: `D 50 (each)`,
+            },
+            {
+              service: `Delivery Charges (price may vary)`,
+              price: `D 150 per trip`,
+            },
+          ],
+        },
+      ];
+
+      const pricesContainer = document.querySelector(".pricesContainer");
+      pricing.forEach((price) => {
+        pricesContainer.innerHTML += `
+        <div class="flex flex-col mb-7">
+          <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
+            <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
+              <div class="overflow-hidden">
+                <table class="min-w-full text-left text-sm font-light">
+                  <thead class="border-b font-medium dark:border-neutral-500">
+                    <tr class="w-full">
+                      <td scope="col" class="px-6 py-4 text-black">
+                        <h2 class="flex items-center text-2xl">${
+                          price.title
+                        }</h2>
+                        <p class="text-black text-sm mb-4">${
+                          price.description
+                        }</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th scope="col" class="px-6 py-4 text-black">Service</th>
+                      <th scope="col" class="px-6 py-4 text-black">Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    ${price.priceData
+                      .map(
+                        (
+                          servicePrice
+                        ) => `<tr class="border-b dark:border-neutral-500">
+                      <td
+                        class="whitespace-nowrap px-6 py-4 text-black font-medium"
+                      >
+                        ${servicePrice.service}
+                      </td>
+                      <td class="whitespace-nowrap px-6 py-4 text-black">
+                        ${servicePrice.price}
+                      </td>
+                    </tr>`
+                      )
+                      .join("")}
+                    
+                    
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
         `;
       });
     </script>
