--- a/src/about.html
+++ b/src/about.html
@@ -313,7 +313,7 @@
     </main>
 
     <footer class="flex items-center justify-center text-center p-3">
-      <p class="text-sm xl:text-lg text-gray-300">
+      <p class="text-sm text-gray-300">
         Copyright &copy; <span class="footerDate"></span>
         <a href="index.html" class="text-beeYellow underline">FA2BEE Inc.</a>
         All rights reserved.
