--- a/src/fa2bee-laundry.html
+++ b/src/fa2bee-laundry.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link rel="stylesheet" href="css/jquery-ui.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="owl-carousel/owl.carousel.min.css" />
     <link rel="stylesheet" href="owl-carousel/owl.theme.default.min.css" />
 
-    <link rel="stylesheet" href="css/personalStyles.css" />
     <link rel="stylesheet" href="css/personalStyles.css" />
 
     <link href="style.css" rel="stylesheet" />
@@ -308,10 +307,25 @@
 
         <div class="pricesContainer"></div>
       </section>
+
+      <section class="p-5 py-5 xl:p-20 xl:px-36 bg-white" id="faqs">
+        <h1 class="text-center mb-4 text-laundryPurple font-bold text-xl">
+          FAQs
+        </h1>
+        <div class="flex items-center justify-center mb-10">
+          <div class="h-0.5 bg-laundryPurple w-20 mx-3"></div>
+          <img src="img/bee-with-ring.png" class="mx-2" />
+          <div class="h-0.5 bg-laundryPurple w-20 mx-3"></div>
+        </div>
+
+        <!-- class="grid grid-cols-1 lg:grid-cols-2 gap-2" -->
+        <!-- accordion -->
+        <div id="accordion"></div>
+      </section>
     </main>
 
     <footer class="flex items-center justify-center text-center p-3">
-      <p class="text-sm xl:text-lg text-gray-300">
+      <p class="text-sm text-gray-300">
         Copyright &copy; <span class="footerDate"></span>
         <a href="index.html" class="text-beeYellow underline">FA2BEE Inc.</a>
         All rights reserved.
@@ -331,16 +345,20 @@
     ></script>
 
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countto/1.2.0/jquery.countTo.min.js"
       integrity="sha512-RXuJVZbGztKGYMNgmWU6oOHbUwYu+NnzovhT4lyW1kfmEfRK6CD1xL8U+0xACFqSkC3cxMugaaNEP8wWmvl4Jw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
     <script src="owl-carousel/owl.carousel.min.js"></script>
+
     <script src="js/general.js"></script>
+    <script src="js/fa2bee-laundry.js"></script>
     <script>
       const services = [
         {
